--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -8,11 +8,21 @@
  </head>
  <body>
  <div id="header">
- <a href="/" class="logo">My shop</a>
+ <a href="/" class="logo">ShopIO</a>
  </div>
  <div id="subheader">
  <div class="cart">
- Your cart is empty.
+    {% with total_items=cart|length %}
+    {% if total_items > 0 %}
+    Your cart:
+    <a href="{% url "cart:cart_detail" %}">
+    {{ total_items }} item{{ total_items|pluralize }},
+    ${{ cart.get_total_price }}
+    </a>
+    {% else %}
+    Your cart is empty.
+    {% endif %}
+    {% endwith %}
  </div>
  </div>
  <div id="content">
