--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -45,13 +45,31 @@ method="post">
  </tr>
  {% endwith %}
  {% endfor %}
- <tr class="total">
- <td>Total</td>
- <td colspan="4"></td>
- <td class="num">${{ cart.get_total_price }}</td>
- </tr>
+ {% if cart.coupon %}
+<tr class="subtotal">
+<td>Subtotal</td>
+<td colspan="4"></td>
+<td class="num">${{ cart.get_total_price|floatformat:2 }}</td>
+</tr>
+<tr>
+<td>
+"{{ cart.coupon.code }}" coupon
+({{ cart.coupon.discount }}% off)
+</td>
+<td colspan="4"></td>
+<td class="num neg">
+– ${{ cart.get_discount|floatformat:2 }}
+</td>
+</tr>
+{% endif %}
  </tbody>
  </table>
+ <p>Apply a coupon:</p>
+<form action="{% url "coupons:apply" %}" method="post">
+{{ coupon_apply_form }}
+<input type="submit" value="Apply">
+{% csrf_token %}
+</form>
  <p class="text-right">
  <a href="{% url "shop:product_list" %}" class="button
  light">Continue shopping</a>
